# rust-low-latency-trading

./: Cargo.toml  README.md
common/: Cargo.toml
common/benches/: queue_bench.rs
common/src/: lf_queue.rs  lib.rs  logging.rs  mem_pool.rs  net.rs  time.rs  types.rs
common/src/net/: mod.rs  multicast.rs  tcp.rs
exchange/: Cargo.toml
exchange/benches/: e2e_latency.rs  order_book_bench.rs
exchange/src/: lib.rs  main.rs  market_data.rs  matching_engine.rs  order_book.rs  order_server.rs  protocol.rs
trading/: Cargo.toml
trading/src/: features.rs  lib.rs  main.rs  market_data.rs  order_gateway.rs  position.rs  risk.rs  strategies.rs  trade_engine.rs
trading/src/strategies/: liquidity_taker.rs  market_maker.rs  mod.rs
trading/tests/: integration.rs
