[package]
name = "exchange"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "exchange"
path = "src/main.rs"

[lib]
name = "exchange"
path = "src/lib.rs"

[dependencies]
common = { path = "../common" }
zerocopy = { version = "0.7", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "order_book_bench"
harness = false

[[bench]]
name = "e2e_latency"
harness = false
